<resources>
    <string name="app_name">Reading Log</string>
    <string name="duration">%1$d %2$s, %3$d %4$s</string>
    <string name="duration_seconds">%1$d %2$s</string>
    <string name="book_title">Book Title</string>
    <string name="chapter">Page</string>
    <string name="submit">Submit</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="last_page">Page History</string>
    <string name="close">Close</string>
    <string name="add_new_book">Add New Book</string>
    <string name="page">Total Page</string>
    <string name="picture_file_format">READINGLOG_%1$s_</string>
    <string name="fail_create_file_text">Cannot create picture file, please try again</string>
    <string name="application_id">com.aesthomic.readinglog.fileprovider</string>
    <string name="no_book">No Available Book</string>
    <string name="page_info">%1$d / %2$d</string>
    <string name="delete">Delete</string>
    <string name="tab_main_1">Read</string>
    <string name="tab_main_2">Book</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="page_format">%1$d %2$s</string>
    <string name="book_page">Book Page</string>
    <string name="book_description">Book \nDescription</string>
    <string name="done">Done</string>
    <string name="grant_permission">Grant permission to storage for accessing your gallery!</string>
    <string name="ungrant_permission">Permission Ungranted!</string>
</resources>
