<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".readdetail.ReadDetailFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_detail_title_text"
            style="@style/TextDetail.Title"
            app:layout_constraintTop_toTopOf="@id/gl_detail_margin_top"
            app:layout_constraintStart_toStartOf="@id/gl_detail_margin_start"
            app:layout_constraintEnd_toEndOf="@id/gl_detail_margin_end"
            android:text="@string/book_title"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_detail_title"
            style="@style/TextDetail"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title_text"
            app:layout_constraintEnd_toEndOf="@id/tv_detail_title_text"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_title_text"
            tools:text="Lord of the Ring"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_detail_start_text"
            style="@style/TextDetail.Title"
            android:layout_marginTop="@dimen/half_vertical_margin"
            app:layout_constraintStart_toStartOf="@id/tv_detail_title"
            app:layout_constraintEnd_toEndOf="@id/tv_detail_title"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
            android:text="@string/start_time"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_detail_start"
            style="@style/TextDetail"
            app:layout_constraintStart_toStartOf="@id/tv_detail_start_text"
            app:layout_constraintEnd_toEndOf="@id/tv_detail_start_text"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_start_text"
            tools:text="07 December 2019"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_detail_end_text"
            style="@style/TextDetail.Title"
            android:layout_marginTop="@dimen/half_vertical_margin"
            app:layout_constraintStart_toStartOf="@id/tv_detail_start"
            app:layout_constraintEnd_toEndOf="@id/tv_detail_start"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_start"
            android:text="@string/end_time"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_detail_end"
            style="@style/TextDetail"
            app:layout_constraintStart_toStartOf="@id/tv_detail_end_text"
            app:layout_constraintEnd_toEndOf="@id/tv_detail_end_text"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_end_text"
            tools:text="08 December 2019"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_detail_page_text"
            style="@style/TextDetail.Title"
            android:layout_marginTop="@dimen/half_vertical_margin"
            app:layout_constraintStart_toStartOf="@id/tv_detail_end"
            app:layout_constraintEnd_toEndOf="@id/tv_detail_end"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_end"
            android:text="@string/last_page"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_detail_page"
            style="@style/TextDetail"
            app:layout_constraintStart_toStartOf="@id/tv_detail_page_text"
            app:layout_constraintEnd_toEndOf="@id/tv_detail_page_text"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_page_text"
            tools:text="192"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/gl_detail_margin_bottom"
            app:layout_constraintStart_toStartOf="@id/gl_detail_margin_start"
            app:layout_constraintEnd_toEndOf="@id/gl_detail_margin_end"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/close"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_detail_margin_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/vertical_margin"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_detail_margin_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/vertical_margin"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_detail_margin_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/vertical_margin"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_detail_margin_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/vertical_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>