<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.aesthomic.readinglog.readbook.ReadBookViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".readbook.ReadBookFragment">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_readbook_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/gl_readbook_margin_start"
                app:layout_constraintEnd_toEndOf="@id/gl_readbook_margin_end"
                app:layout_constraintTop_toTopOf="@id/gl_readbook_margin_top"
                android:inputType="text"
                android:hint="@string/book_title"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_readbook_page"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/et_readbook_title"
                app:layout_constraintStart_toStartOf="@id/et_readbook_title"
                app:layout_constraintEnd_toEndOf="@id/et_readbook_title"
                android:inputType="number"
                android:hint="@string/chapter"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_readbook_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_vertical_margin"
                app:layout_constraintTop_toBottomOf="@id/et_readbook_page"
                app:layout_constraintStart_toStartOf="@id/gl_readbook_margin_start"
                app:layout_constraintEnd_toEndOf="@id/gl_readbook_margin_end"
                android:onClick="@{() -> viewModel.onDataSubmitted()}"
                android:text="@string/submit"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_readbook_margin_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/horizontal_margin"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_readbook_margin_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/horizontal_margin"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_readbook_margin_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/vertical_margin"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_readbook_margin_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="@dimen/vertical_margin"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/bottom_sheet"
            layout="@layout/bottom_sheet_read_book"
            app:viewModel="@{viewModel}"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>