<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.aesthomic.readinglog.readbook.ReadBookViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/botsheet_read_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        app:behavior_hideable="false"
        app:behavior_peekHeight="56dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_botsheet_read_book_head"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toTopOf="@id/gl_botsheet_read_book_top"
                app:layout_constraintStart_toStartOf="@id/gl_botsheet_read_book_start"
                app:layout_constraintEnd_toEndOf="@id/gl_botsheet_read_book_end"
                android:src="@drawable/ic_view_headline" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_botsheet_read_book_head"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginBottom="@dimen/vertical_margin"
                app:layout_constraintStart_toStartOf="@id/gl_botsheet_read_book_start"
                app:layout_constraintEnd_toEndOf="@id/gl_botsheet_read_book_end"
                app:layout_constraintTop_toBottomOf="@id/iv_botsheet_read_book_head"
                app:layout_constraintBottom_toTopOf="@id/iv_botsheet_read_book_photo"
                android:textStyle="bold"
                android:textSize="15sp"
                android:text="@string/add_new_book" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_botsheet_read_book_photo"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:layout_marginBottom="@dimen/vertical_margin"
                app:layout_constraintTop_toBottomOf="@id/tv_botsheet_read_book_head"
                app:layout_constraintStart_toStartOf="@id/tv_botsheet_read_book_head"
                app:layout_constraintEnd_toEndOf="@id/tv_botsheet_read_book_head"
                app:layout_constraintBottom_toTopOf="@id/et_botsheet_read_book_title"
                android:onClick="@{() -> viewModel.onEventCamera()}"
                android:src="@drawable/ic_photo" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_botsheet_read_book_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half_vertical_margin"
                app:layout_constraintStart_toStartOf="@id/gl_botsheet_read_book_start"
                app:layout_constraintEnd_toEndOf="@id/gl_botsheet_read_book_end"
                app:layout_constraintTop_toBottomOf="@id/iv_botsheet_read_book_photo"
                app:layout_constraintBottom_toTopOf="@id/et_botsheet_read_book_page"
                android:textSize="15sp"
                android:text="@={viewModel.titleText}"
                android:hint="@string/book_title" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_botsheet_read_book_page"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/et_botsheet_read_book_title"
                app:layout_constraintTop_toBottomOf="@id/et_botsheet_read_book_title"
                app:layout_constraintBottom_toBottomOf="@id/gl_botsheet_read_book_bottom"
                android:inputType="number"
                android:textSize="15sp"
                android:text="@={viewModel.pageText}"
                android:hint="@string/page" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_botsheet_read_book_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/et_botsheet_read_book_title"
                app:layout_constraintBottom_toBottomOf="@id/et_botsheet_read_book_page"
                android:enabled="@{viewModel.titlePageMediator}"
                android:onClick="@{() -> viewModel.addBook()}"
                android:textSize="15sp"
                android:text="@string/submit" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_botsheet_read_book_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/vertical_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_botsheet_read_book_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/vertical_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_botsheet_read_book_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/vertical_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_botsheet_read_book_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="@dimen/vertical_margin" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>